--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button id="18">Arco 18</button>
         <button id="19">Arco 19</button>
         <button id="20">Arco 20</button>
+        <button id="21">Arco 21</button>
+        <button id="22">Arco 22</button>
       </section>
     </article>
   </body>
